<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HouseController</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="lights">Lights</string>
    <string name="receiver">Audio Power</string>
    <string name="projector">Projector Power</string>
    <string name="movies">Play Movies</string>
    <string name="music">Play Music</string>

</resources>